<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.narritt.audioplayer.Preferences.PrefEqualizerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">
            <TextView
                android:text="@string/pref_equalizer"
                android:id="@+id/pref_equalizer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
            <CheckBox
                android:id="@+id/chb_pref_equalizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/seekBar1"
                android:layout_gravity="right"/>
            <TextView
                android:text="@string/pref_equalizer_seekbar_title_1"
                android:id="@+id/pref_equalizer_1"
                android:layout_below="@+id/pref_equalizer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/big_vertical_margin" />
            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_toRightOf="@+id/pref_equalizer_1"
                android:layout_alignBottom="@+id/pref_equalizer_1"
                android:layout_alignLeft="@+id/seekBar4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"/>
            <TextView
                android:text="@string/pref_equalizer_seekbar_title_2"
                android:id="@+id/pref_equalizer_2"
                android:layout_below="@+id/pref_equalizer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="@dimen/activity_vertical_margin" />
            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_toRightOf="@+id/pref_equalizer_2"
                android:layout_alignTop="@+id/pref_equalizer_2"
                android:layout_alignLeft="@+id/seekBar4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"/>
            <TextView
                android:text="@string/pref_equalizer_seekbar_title_3"
                android:layout_below="@+id/pref_equalizer_2"
                android:id="@+id/pref_equalizer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="@dimen/activity_vertical_margin" />
            <SeekBar
                android:id="@+id/seekBar3"
                android:layout_toRightOf="@+id/pref_equalizer_3"
                android:layout_alignTop="@+id/pref_equalizer_3"
                android:layout_alignLeft="@+id/seekBar4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"/>
            <TextView
                android:text="@string/pref_equalizer_seekbar_title_4"
                android:id="@+id/pref_equalizer_4"
                android:layout_below="@+id/pref_equalizer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="@dimen/activity_vertical_margin" />
            <SeekBar
                android:id="@+id/seekBar4"
                android:layout_toRightOf="@+id/pref_equalizer_4"
                android:layout_alignTop="@+id/pref_equalizer_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"/>
            <TextView
                android:text="@string/pref_equalizer_seekbar_title_5"
                android:id="@+id/pref_equalizer_5"
                android:layout_below="@+id/pref_equalizer_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="@dimen/activity_vertical_margin" />
            <SeekBar
                android:id="@+id/seekBar5"
                android:layout_toRightOf="@+id/pref_equalizer_5"
                android:layout_alignTop="@+id/pref_equalizer_5"
                android:layout_alignLeft="@+id/seekBar4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/playerNavigationButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/background_navigation_buttons"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnBackToPlayer"
            android:text="@string/backToPlayer"
            android:layout_gravity="right"
            android:layout_alignParentEnd="true"
            android:onClick="btnBackToPlayerClick"
            android:background="@drawable/btn_none_borders"/>
    </LinearLayout>
</RelativeLayout>
