<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="@color/background"
    tools:context="com.example.narritt.audioplayer.PlayerActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/strbtnlayout"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_current_playlist"
            android:onClick="btnCurrPlaylistClick"
            android:src="@drawable/btn_current_playlist"
            android:adjustViewBounds="true"
            android:maxHeight="50dp"
            android:maxWidth="50dp"
            android:scaleType="centerInside"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="15">
            <TextView
                android:id="@+id/strArtistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artistname_default_string"
                android:textStyle="bold"
                android:textAlignment="center"
                android:scrollHorizontally="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:layout_marginTop="@dimen/namestrings_margin_vertical"
                android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/strAlbumName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/albumname_default_string"
                android:textAlignment="center"
                android:scrollHorizontally="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:layout_below="@+id/strArtistName"
                android:paddingTop="@dimen/namestrings_margin_vertical" />
        </LinearLayout>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pref"
            android:onClick="btnPrefClick"
            android:src="@drawable/btn_preferences"
            android:adjustViewBounds="true"
            android:maxHeight="50dp"
            android:maxWidth="50dp"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:id="@+id/strSongName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/songname_default_string"
        android:textAlignment="center"
        android:layout_below="@+id/strbtnlayout"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:paddingTop="@dimen/namestrings_margin_vertical"
        android:paddingBottom="@dimen/namestrings_margin_vertical" />

    <ImageView
        android:id="@+id/imgAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/strSongName"
        android:layout_marginLeft="@dimen/albumcover_margin_horizontal"
        android:layout_marginRight="@dimen/albumcover_margin_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/octave_max"
        android:background="@color/white"/>
    <SeekBar
        android:id="@+id/progressControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgAlbum"
        android:layout_marginLeft="@dimen/progresscontrol_margin_horizontal"
        android:layout_marginRight="@dimen/progresscontrol_margin_horizontal"
        android:layout_marginTop="@dimen/progresscontrol_margin_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/progressControl">
        <TextView
            android:id="@+id/strCurrentSongPosition"
            android:text="@string/timestamp_track_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/timestamp_margin_horizontal"
            android:gravity="left"/>
        <TextView
            android:id="@+id/strSongDuration"
            android:text="@string/timestamp_track_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/timestamp_margin_horizontal"
            android:gravity="right"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/playerNavigationButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#DCDCDC"
        android:layout_alignParentBottom="true">
        <Button
            android:text="@string/toArtists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnToArtists"
            android:layout_weight="1"
            android:onClick="btnToArtists"
            android:background="@drawable/btn_none_borders" />
        <Button
            android:text="@string/toPlaylists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnBack"
            android:layout_weight="1"
            android:onClick="btnToPlaylists"
            android:background="@drawable/btn_none_borders" />
    </LinearLayout>


        <LinearLayout
            android:id="@+id/playerButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@+id/playerNavigationButtons"
            android:layout_marginBottom="@dimen/controlbuttons_margin_bottom">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btnLoop"
                android:onClick="btnLoopClick"
                android:src="@drawable/loop_off1"
                android:background="@drawable/btn_none_borders" />
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:id="@+id/btnPrev"
                android:src="@drawable/prev"
                android:onClick="btnPrevClick"
                android:background="@drawable/btn_none_borders" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/controlbuttons_margin_between"
                android:id="@+id/btnPlay"
                android:onClick="btnPlayClick"
                android:src="@drawable/play"
                android:background="@drawable/btn_none_borders" />
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/controlbuttons_margin_between"
                android:id="@+id/btnNext"
                android:src="@drawable/next"
                android:onClick="btnNextClick"
                android:background="@drawable/btn_none_borders" />
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/controlbuttons_margin_between"
                android:id="@+id/btnRand"
                android:src="@drawable/rand_off"
                android:onClick="btnRandClick"
                android:background="@drawable/btn_none_borders" />
        </LinearLayout>

</RelativeLayout>
